@@ -1,3 +1,9 @@
+2008-04-03  Gabriel Burt  <gabriel.burt@gmail.com>
+
+	* src/Extensions/Banshee.PlayQueue/Banshee.PlayQueue/PlayQueueSource.cs:
+	When the Play Queue is initialized, if it has tracks and the PlayerEngine
+	is not already playing, set it as the playback source.
+
 2008-04-03  Aaron Bockover  <abock@gnome.org>
 
 	* build/build.rules.mk:
